# cpp-cooker

./: .gitignore  README.md
aphelion/: .gitignore  CMakeLists.txt  README.md  baseline_brain.txt  brain_mtf.txt  build.ps1  test_out.txt  test_v3.txt  test_v3_bench.txt  vcpkg.json
aphelion/custom-triplets/: x64-windows.cmake
aphelion/evolution_smoke_test/: gen_0_summary.txt  gen_1_summary.txt  gen_2_summary.txt
aphelion/include/aphelion/: account.h  data_ingest.h  evolution_engine.h  execution.h  features.h  indicator_library.h  intelligence.h  market_state.h  multi_timeframe.h  quantlib_layer.h  regime.h  replay_engine.h  reporting.h  risk_manager.h  robustness_score.h  robustness_validator.h  strategy.h  strategy_genome.h  tournament.h  types.h  validation_engine.h
aphelion/src/: account.cpp  data_ingest.cpp  evolution_engine.cpp  execution.cpp  features.cpp  indicator_library.cpp  intelligence.cpp  main.cpp  market_state.cpp  multi_timeframe.cpp  quantlib_layer.cpp  regime.cpp  replay_engine.cpp  reporting.cpp  risk_manager.cpp  robustness_score.cpp  robustness_validator.cpp  strategy.cpp  strategy_genome.cpp  tournament.cpp  validation_engine.cpp
data_sim_ready/: run_summary.json
data_sim_ready/XAUUSD/D1/bars/: manifest.json  validation_report.json
data_sim_ready/XAUUSD/H1/bars/: manifest.json  validation_report.json
data_sim_ready/XAUUSD/H12/bars/: manifest.json  validation_report.json
data_sim_ready/XAUUSD/H2/bars/: manifest.json  validation_report.json
data_sim_ready/XAUUSD/H3/bars/: manifest.json  validation_report.json
(+190 files in other folders)
